test/files/neg/macro-invalidsig-tparams-notparams-a.check
Macros_Test_2.scala:2: error: wrong number of type parameters for method foo: [U](c: scala.reflect.macros.Context)(implicit evidence$1: c.AbsTypeTag[U])Nothing
  def foo = macro Impls.foo
                        ^
one error found
